fix: Changing z-index again for the header and nav, because they did not overshadow the likedislikepanel

--- a/src/style/components/_doggyburger.scss
+++ b/src/style/components/_doggyburger.scss
@@ -2,7 +2,7 @@
   height: 2.4rem;
   cursor: pointer;
   overflow: hidden;
-  z-index: 9;
+  z-index: 10;
   .line {
     width: 3rem;
     height: 0.2rem;
